--- a/src/App.scss
+++ b/src/App.scss
@@ -63,7 +63,7 @@ body {
   background-size: cover;
   position: relative;
   // text-align: center;
-  background-color: darkgrey;
+  // background-color: darkgrey;
   .ant-card-body {
     padding: 0;
     position: absolute;
@@ -301,21 +301,21 @@ body {
   }
 }
 
-.card-top-60 {
-  height: 150px;
-  width: 150px;
-  .ant-card-body {
-    top: 60%;
-    .card-name {
-      color: black;
-    }
-    .card-sub-text {
-      color: wheat;
-      line-height: 12px;
-      font-size: 12px;
-    }
-  }
-}
+// .card-top-60 {
+//   height: 150px;
+//   width: 150px;
+//   .ant-card-body {
+//     top: 60%;
+//     .card-name {
+//       color: black;
+//     }
+//     .card-sub-text {
+//       color: wheat;
+//       line-height: 12px;
+//       font-size: 12px;
+//     }
+//   }
+// }
 
 .selected-border {
   border: 4px solid red;
