fixed place order  and add cart in edit mode

--- a/src/App.scss
+++ b/src/App.scss
@@ -526,6 +526,7 @@ body {
 .product-logo {
   width: 25px;
   height: fit-content;
+  cursor: pointer;
 }
 .main-content-layout-sidebar {
   .ant-table-cell {
